--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "content": "CC­BY­NC­SA 4.0"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "materialize-css": "^0.100.2"
   },
   "devDependencies": {
     "eslint": "^3.15.0",
